# semgrep-editor-proxy

./: .gitignore  .pre-commit-config.yaml  Dockerfile  config.yaml  mypy.ini  pyproject.toml  run.sh
semgrep_editor_proxy/: __init__.py  constants.py  lsp_process.py  main.py  proxy.py  util.py
tests/: conftest.py
tests/integration/: test_proxy.py
